...
    let progressView = UIProgressView()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        setupUIElements()
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
             options: [],
             changeHandler: { [weak self] webView, _ in
                 guard let self else { return }
...
