...
    }
    
    private func setupViews() {
        contentView.addSubview(cellImage)
        contentView.addSubview(gradientOverlay)
        contentView.addSubview(cellLike)
        cellLike.accessibilityIdentifier = "likeButton"
        contentView.addSubview(cellDate)
    }
    private func setupConstraintsAndVisuals() {
        cellImage.translatesAutoresizingMaskIntoConstraints = false
        cellDate.translatesAutoresizingMaskIntoConstraints = false
        cellLike.translatesAutoresizingMaskIntoConstraints = false
...
