...
        loginButton.setTitleColor(.ypBlackIOS, for: .normal)
        loginButton.backgroundColor = .ypWhiteIOS
        loginButton.setTitle("Войти", for: .normal)
        loginButton.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .semibold)
        loginButton.layer.cornerRadius = 16
        loginButton.clipsToBounds = true
        loginButton.accessibilityIdentifier = "Authenticate"
        let action = UIAction { [weak self] _ in
            guard let self else { return }
            
            let webVC = WebViewViewController()
            let authHelper = AuthHelper()
            let presenter = WebViewPresenter(authHelper: authHelper)
...
